@@ -1,14 +1,30 @@
 package com.openelements.logger.benchmarks;
 
+import static com.openelements.logger.api.BenchmarkConstants.FORK_COUNT;
+import static com.openelements.logger.api.BenchmarkConstants.MEASUREMENT_ITERATIONS;
+import static com.openelements.logger.api.BenchmarkConstants.MEASUREMENT_TIME_IN_SECONDS_PER_ITERATION;
+import static com.openelements.logger.api.BenchmarkConstants.PARALLEL_THREAD_COUNT;
+import static com.openelements.logger.api.BenchmarkConstants.WARMUP_ITERATIONS;
+import static com.openelements.logger.api.BenchmarkConstants.WARMUP_TIME_IN_SECONDS_PER_ITERATION;
+
 import com.openelements.logger.api.LogLikeHell;
 import com.openelements.logger.api.Logger;
 import com.openelements.logger.chronicle.ChronicleQueueLogger;
 import net.openhft.chronicle.queue.ChronicleQueue;
-import org.openjdk.jmh.annotations.*;
+import org.openjdk.jmh.annotations.Benchmark;
+import org.openjdk.jmh.annotations.BenchmarkMode;
+import org.openjdk.jmh.annotations.Fork;
+import org.openjdk.jmh.annotations.Measurement;
+import org.openjdk.jmh.annotations.Mode;
+import org.openjdk.jmh.annotations.Param;
+import org.openjdk.jmh.annotations.Scope;
+import org.openjdk.jmh.annotations.Setup;
+import org.openjdk.jmh.annotations.State;
+import org.openjdk.jmh.annotations.Threads;
+import org.openjdk.jmh.annotations.Warmup;
+import org.openjdk.jmh.infra.Blackhole;
 
-import static com.openelements.logger.api.BenchmarkConstants.*;
-
-@State(Scope.Thread)
+@State(Scope.Benchmark)
 public class ChronicleQueueBenchmark {
 
     public static final String QUEUE_NAME = "target/chronicle-queue-" + System.nanoTime();
@@ -22,11 +38,11 @@ public class ChronicleQueueBenchmark {
     @Setup
     public void setUp() {
         logger = new ChronicleQueueLogger(QUEUE, ChronicleQueueBenchmark.class);
-        logLikeHell = new LogLikeHell(logger, false);
+        logLikeHell = new LogLikeHell(logger);
     }
 
     @Benchmark
-    @Fork(jvmArgsAppend = {
+    @Fork(value = FORK_COUNT, jvmArgsAppend = {
             "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
             "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
             "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
@@ -45,7 +61,113 @@ public class ChronicleQueueBenchmark {
     @BenchmarkMode(Mode.Throughput)
     @Warmup(iterations = WARMUP_ITERATIONS, time = WARMUP_TIME_IN_SECONDS_PER_ITERATION)
     @Measurement(iterations = MEASUREMENT_ITERATIONS, time = MEASUREMENT_TIME_IN_SECONDS_PER_ITERATION)
-    public void run() {
+    public void runLogLikeHell() {
         logLikeHell.run();
     }
+
+
+    @Benchmark
+    @Fork(value = FORK_COUNT, jvmArgsAppend = {
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+            "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-exports=java.base/jdk.internal.util=ALL-UNNAMED",
+            "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
+            "--add-opens=java.base/java.io=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED"
+    })
+    @Threads(PARALLEL_THREAD_COUNT)
+    @BenchmarkMode(Mode.Throughput)
+    @Warmup(iterations = WARMUP_ITERATIONS, time = WARMUP_TIME_IN_SECONDS_PER_ITERATION)
+    @Measurement(iterations = MEASUREMENT_ITERATIONS, time = MEASUREMENT_TIME_IN_SECONDS_PER_ITERATION)
+    public void runSingleSimpleLog() {
+        logger.log("Hello World");
+    }
+
+    @Benchmark
+    @Fork(value = FORK_COUNT, jvmArgsAppend = {
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+            "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-exports=java.base/jdk.internal.util=ALL-UNNAMED",
+            "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
+            "--add-opens=java.base/java.io=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED"
+    })
+    @Threads(PARALLEL_THREAD_COUNT)
+    @BenchmarkMode(Mode.Throughput)
+    @Warmup(iterations = WARMUP_ITERATIONS, time = WARMUP_TIME_IN_SECONDS_PER_ITERATION)
+    @Measurement(iterations = MEASUREMENT_ITERATIONS, time = MEASUREMENT_TIME_IN_SECONDS_PER_ITERATION)
+    public void runSingleComplexLog() {
+        logger.withMarker("MARKER1").
+                withMarker("MARKER2").
+                withMarker("MARKER3").
+                withMetadata("user", "user1").
+                withMetadata("transaction", "t34").
+                withMetadata("session", "session56").
+                log("Hello {}", new RuntimeException("OHOH"), "World");
+    }
+
+    @Benchmark
+    @Fork(value = FORK_COUNT, jvmArgsAppend = {
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+            "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-exports=java.base/jdk.internal.util=ALL-UNNAMED",
+            "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
+            "--add-opens=java.base/java.io=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED"
+    })
+    @Threads(PARALLEL_THREAD_COUNT)
+    @BenchmarkMode(Mode.Throughput)
+    @Warmup(iterations = WARMUP_ITERATIONS, time = WARMUP_TIME_IN_SECONDS_PER_ITERATION)
+    @Measurement(iterations = MEASUREMENT_ITERATIONS, time = MEASUREMENT_TIME_IN_SECONDS_PER_ITERATION)
+    public void runLoggerInstantiation(Blackhole blackhole) {
+        Logger logger1 = new ChronicleQueueLogger(QUEUE, ChronicleQueueBenchmark.class);
+        blackhole.consume(logger1);
+    }
+
+    @Benchmark
+    @Fork(value = FORK_COUNT, jvmArgsAppend = {
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+            "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-exports=java.base/jdk.internal.util=ALL-UNNAMED",
+            "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
+            "--add-opens=java.base/java.io=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED"
+    })
+    @Threads(PARALLEL_THREAD_COUNT)
+    @BenchmarkMode(Mode.Throughput)
+    @Warmup(iterations = WARMUP_ITERATIONS, time = WARMUP_TIME_IN_SECONDS_PER_ITERATION)
+    @Measurement(iterations = MEASUREMENT_ITERATIONS, time = MEASUREMENT_TIME_IN_SECONDS_PER_ITERATION)
+    public void runLoggerInstantiationAndSingleSimpleLog() {
+        Logger logger1 = new ChronicleQueueLogger(QUEUE, ChronicleQueueBenchmark.class);
+        logger1.log("Hello World");
+    }
+
 }
